--- a/css/main.css
+++ b/css/main.css
@@ -288,8 +288,14 @@ ul {
 
 .bio {
 	text-align: centre;
-	padding: 10em 4em;
+	padding: 10em 4em 4em;
 	letter-spacing: 2px;
+	-webkit-column-count: 2;
+	-webkit-column-gap: 0px;
+	-moz-column-count: 2;
+	-moz-column-gap: 0px;
+	column-count: 2;
+	column-gap: 0px;
 }
 
 .bio img {
@@ -325,9 +331,9 @@ ul {
 	text-align: center;
 	letter-spacing: 2px;
 	background-color: rgba(0,0,0,1.00);
-	padding: 2em 0 3em;
+	padding: 1em 0 2.5em;
 	color: white;
-	margin: 8em 4em;
+	margin: 2em 4em;
 }
 
 /*-------------------------FOOTER SECTION-------------------------*/
@@ -423,7 +429,7 @@ ul {
 
 @media only screen and (min-width: 70em) {
 	.bio {
-		padding: 10em 4em 15em;
+		padding: 10em 4em 6em;
 	}
 	.bio img {
 		max-width: 500px;
@@ -439,7 +445,6 @@ ul {
 	.nav a:hover {
 		margin: 0em 0em 0em .5em;
 	}
-
 	#nav li {
 		margin: 0 0 0 .87em;
 	}
