--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,40 @@ ul {
   transform: none;
 }
 
+/*-------------------------BIO SECTION-------------------------*/
+
+.home {
+	text-align: centre;
+	padding: 10em 4em 4em;
+	letter-spacing: 2px;
+	-webkit-column-count: 2;
+	-webkit-column-gap: 0px;
+	-moz-column-count: 2;
+	-moz-column-gap: 0px;
+	column-count: 2;
+	column-gap: 0px;
+}
+
+.home img {
+	width: 100%;
+	margin: auto;
+}
+
+.home h1 {
+	font-weight: 100;
+	padding-top: 1.75em;
+	padding-bottom: .5em;
+	font-weight: 300;
+	font-size: .9em;
+}
+
+.home p {
+	margin: auto;
+	font-size: .9em;
+	line-height: 1.5em;
+	padding: 0em 1em;
+}
+
 /*-------------------------PORTFOLIO SECTION-------------------------*/
 
 .portfolio {
