--- a/css/main.css
+++ b/css/main.css
@@ -377,9 +377,8 @@ ul {
 	background-color: rgba(255,255,255,1.00);
 }
 .footer-social img {
-	width: 70px;
 	opacity: 1;
-	padding: 4em 0 0;
+	padding: 4em 0 1em;
 }
 
 .footer-social img:hover {
@@ -431,8 +430,7 @@ ul {
 .social li a:link,
 .social li a:visited {
 	display: inline-block;
-	color: rgba(7,7,7,1.00);
-	width: 20px;
+	width: 30px;
 }
 
 .social li a:hover,
