changed colour back

--- a/css/main.css
+++ b/css/main.css
@@ -399,7 +399,7 @@ ul {
 .footer-social p {
 	font-size: .85em;
 	background-color: rgba(255,255,255,0);
-	color: rebeccapurple;
+	color: #1C1C1C;
 	letter-spacing: 1px;
 }
 
