--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ ul {
 {
   display: block;
   width: 20px;
-  height: 1.5px;
+  height: 2px;
   margin-bottom: 5px;
   position: relative;
 
@@ -401,6 +401,7 @@ ul {
 	background-color: rgba(255,255,255,0);
 	color: #1C1C1C;
 	letter-spacing: 1px;
+	font-weight: 500;
 }
 
 /*-------------------------SOCIAL LINKS SECTION-------------------------*/
