added background colour
404 page

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ ul {
 
 .error h2 {
 	font-weight: 100; 
-	font-size: 1em;
+	font-size: .9em;
 	color: #1C1C1C;
 	padding-top: 3em;
 	letter-spacing: 1px;
